--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,13 @@
   <title>Advanced React Application Example</title>
   <meta name="description" content="The HTML5 Herald">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
+  <script type="text/javascript">
+    window.initialData = <%- JSON.stringify(initialData) -%>
+  </script>
 </head>
 
 <body>
-  <div id="root">
-    Loading...
-  </div>
+  <div id="root"><%- initialMarkup -%></div>
 
   <script src="/bundle.js" charset="utf-8"></script>
 </body>
